infra/k8s-prod/public-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: public-app
